--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Overview of Changes in BEAST/BSE 0.5.5:
 * Added support for external MIDI events in song tracks
 * Added prototype support to IDL compiler [Stefan Westerfeld]
 * Work around PTH poll() bug on NetBSD [Ben Collver, Tim Janik]
+* Support NetBSD sound device names [Ben Collver]
 * Lots of small MIDI handling fixes
 
 Overview of Changes in BEAST/BSE 0.5.4:
