--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ Overview of Changes in BEAST/BSE 0.5.5:
 * Added prototype support to IDL compiler [Stefan Westerfeld]
 * Work around PTH poll() bug on NetBSD [Ben Collver, Tim Janik]
 * Support NetBSD sound device names [Ben Collver]
+* Fixed MP3 loader
 * Lots of small MIDI handling fixes
 
 Overview of Changes in BEAST/BSE 0.5.4:
