--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Fri Aug 22 08:06:29 2003  Tim Janik  <timj@gtk.org>
+
+	* testidl.idl:
+	* Makefile.am: renamed *.sfidl to *.idl.
+
 Fri Aug 22 07:48:14 2003  Tim Janik  <timj@gtk.org>
 
 	* sfidl-parser.cc: move everything into an anonymous namespace to
