--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Fri Aug 22 19:47:55 2003  Tim Janik  <timj@gtk.org>
+
+	* sfidl-parser.cc (parseChoiceValue): applied patch from stefan which
+	allowes choice values as number (or Neutral), string, or a pair of both.
+
 Fri Aug 22 08:06:29 2003  Tim Janik  <timj@gtk.org>
 
 	* testidl.idl:
