--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ Overview of Changes in BEAST/BSE 0.5.5:
   BseMonoKeyboard - Monophonic MIDI Keyboard input module
 * Implemented ability to use sequencer as modulation source
 * Added support for external MIDI events in song tracks
+* Added support for C++ Plugins
+* Added backend to IDL compiler for simple creation of C++ Modules
 * Added prototype support to IDL compiler [Stefan Westerfeld]
 * Work around PTH poll() bug on NetBSD [Ben Collver, Tim Janik]
 * Support NetBSD sound device names [Ben Collver]
