update beast HOWTO url.
Tue Sep  2 23:05:35 2003  Tim Janik  <timj@gtk.org>

        * docs/site-download.texi: update beast HOWTO url.

svn path=/trunk/; revision=1249

--- a/docs/site-download.texi
+++ b/docs/site-download.texi
@@ -91,7 +91,7 @@ should do.
 For SuSE 8.2,
 @uref{mailto://gwaluga@@computerbraxas.de,,Gregor Waluga}
 has written a small
-@uref{http://linux.waluga.de/beast/BEAST-installation under-SuSE 82.txt,,HOWTO in english and german}
+@uref{http://linux.waluga.de/beast/beast-install-howto.htm,,HOWTO in english and german}
 about installing @beast{} and created the related RPMs.
 
 @uref{mailto://collver1@@comcast.net,,Ben Collver}
