--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Sep  2 23:05:35 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/site-download.texi: update beast HOWTO url.
+
 Mon Aug 25 16:11:36 2003  Tim Janik  <timj@gtk.org>
 
 	* autogen.sh: upgrade autoconf dependancy to 2.50.
