--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- bse-plugin-generator: Effect->Property structure copies don't work for strings (merely a pointer copy)
 - support records and sequences in bse-plugin-generator and bseprocidl
 - reenable signals i nbseprocidl
 - add dump-include-path option to bse-plugin-generator
